Exercism in C : Saddle points completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "cmake.configureOnOpen": false,
-    "files.associations": {
-        "common.h": "c"
-    }
+  "cmake.configureOnOpen": false,
+  "files.associations": {
+    "common.h": "c",
+    "stdint-gcc.h": "c"
+  }
 }
