Exercism: Bob completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,14 @@
   "cmake.configureOnOpen": false,
   "files.associations": {
     "common.h": "c",
-    "stdint-gcc.h": "c"
+    "stdint-gcc.h": "c",
+    "array": "c",
+    "any": "c",
+    "string_view": "c",
+    "ranges": "c",
+    "span": "c",
+    "regex": "c",
+    "type_traits": "c",
+    "stacktrace": "c"
   }
 }
