Hackerrank: Dynamic Array completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "span": "c",
     "regex": "c",
     "type_traits": "c",
-    "stacktrace": "c"
+    "stacktrace": "c",
+    "stdlib.h": "c"
   }
 }
